Remove class blink::WebURLResponsePrivate

WebURLResponse can directly point to a ResourceResponse object instead.

BUG=625529

Review-Url: https://codereview.chromium.org/2133693002
Cr-Commit-Position: refs/heads/master@{#404611}

Former-commit-id: 8036fd1c9bbd45f18ab78716e641c6d6cf974f79