third_party/WebKit/public/platform/WebURLResponse.h
@@ -46,7 +46,6 @@ class WebHTTPHeaderVisitor;
 class WebHTTPLoadInfo;
 class WebURL;
 class WebURLLoadTiming;
-class WebURLResponsePrivate;
 
 class WebURLResponse {
 public:
@@ -292,19 +291,24 @@ public:
     BLINK_PLATFORM_EXPORT ExtraData* getExtraData() const;
     BLINK_PLATFORM_EXPORT void setExtraData(ExtraData*);
 
+#if INSIDE_BLINK
 protected:
-    // Permit subclasses to set arbitrary WebURLResponsePrivate pointer as
-    // |m_private|. Parameter must be non-null. |m_owningPrivate| is not set
-    // in this case.
-    BLINK_PLATFORM_EXPORT explicit WebURLResponse(WebURLResponsePrivate*);
+    // Permit subclasses to set arbitrary ResourceResponse pointer as
+    // |m_resourceResponse|. Parameter must be non-null.
+    // |m_ownedResourceResponse| is not set in this case.
+    BLINK_PLATFORM_EXPORT explicit WebURLResponse(ResourceResponse*);
+#endif
 
 private:
-    // If this instance owns WebURLResponsePrivate |m_owningPrivate| is
-    // non-null and is pointed by |m_private|.
-    std::unique_ptr<WebURLResponsePrivate> m_owningPrivate;
+    struct ResourceResponseContainer;
+
+    // If this instance owns a ResourceResponse then |m_ownedResourceResponse|
+    // is non-null and |m_resourceResponse| points to the ResourceResponse
+    // instance it contains.
+    std::unique_ptr<ResourceResponseContainer> m_ownedResourceResponse;
 
     // Should never be null.
-    WebURLResponsePrivate* m_private;
+    ResourceResponse* m_resourceResponse;
 };
 
 } // namespace blink
